<package>
  <name>chaser19</name>
  <version>0.0.0</version>
  <description>A follow human program</description>
  <maintainer email="info@demura.net">Kosei Demura</maintainer>
  <license>BSD</license>
  
  <author email="info@demura.net"> </author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospeex_msgs</build_depend>
  <build_depend>rospeex_if</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>urg_node</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>pcl</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospeex_msgs</run_depend>
  <run_depend>rospeex_if</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>kobuki_safety_controller</run_depend>
  <run_depend>yocs_velocity_smoother</run_depend>
  <run_depend>turtlebot_bringup</run_depend>
  <run_depend>urg_node</run_depend>
  <run_depend>sensor_msgs </run_depend>
  <run_depend>opencv2</run_depend>
  <run_depend>pcl</run_depend>
</package>
