<?xml version="1.0"?>
<package format="2">
  <name>happymimi_apps</name>
  <version>1.0.0</version>
  <description>The happymimi_apps package</description>
  <maintainer email="kit.robocup.home@gmail.com">issei</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <metapackage/>
  </export>
</package>
