<?xml version="1.0"?>
<package format="2">
  <name>happymimi_teleop</name>
  <version>1.0.0</version>
  <description>The happymimi_teleop package</description>

  <maintainer email="kit.robocup.home@gmail.com">issei</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>joy</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>

  <export>

  </export>
</package>
