<?xml version="1.0"?>
<package format="2">
  <name>location_setup</name>
  <version>1.0.0</version>
  <description>The location_setup package</description>
  <maintainer email="kit.robocup.home@gmail.com">issei</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>message_generation</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>rospy</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
